--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
+  dropdown_button2: ^2.1.4
+  dio: ^5.2.1+1
+  lottie: ^2.3.2
+  flutter_stories: ^0.3.1
+  shared_preferences: ^2.2.0
+  sqflite: ^2.2.8+4
+  conditional_builder_null_safety: ^0.0.6
 
 
 dev_dependencies:
@@ -64,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
